# scenescape

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  auto-prune.sh  build-controller.sh  common.mk  deploy.sh  exclude_for_release.txt  find-apt-deps.sh  manage.py  parse-docker-log.py  prune_requirements.py  summarize.sh  test-scenescape.sh  third-party-programs.txt
.github/: CODEOWNERS  ci_migration.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/resources/: requirements.txt
.github/scripts/: check_and_set-build-type.sh  checkout-autolm-scripts.sh  get_release_burndown_ss.py  matrix.py  parse_test_results_xml.py  set_docker_harbor.sh  set_make_env_vars.sh
.github/workflows/: checks-and-scans.yml  migration-tests.yml  post-merge.yml  pre-merge.yml  publish-docs.yml
autocalibration/: .dockerignore  Dockerfile  Makefile  README.md  atag_camera_calibration.py  atag_camera_calibration_controller.py  auto_camera_calibration_controller.py  auto_camera_calibration_model.py  polycam_to_images.py  requirements-buildtime.txt  requirements-runtime.txt
autocalibration/docker/: Dockerfile  Makefile  Makefile.camcalibfiles  install-apriltag.sh  install-netvlad-weights.sh  reloc.tar  requirements-camcalib.txt
autocalibration/docs/: toc.rst
autocalibration/src/: auto_camera_calibration_context.py  camcalibration  camcalibration-init  markerless_camera_calibration.py  markerless_camera_calibration_controller.py
certificates/: Makefile
controller/: Dockerfile  Dockerfile.new  Makefile  README.md  controller  requirements-buildtime.txt  requirements-runtime.txt
controller/docker/: .gitignore  Dockerfile  Dockerfile.new  Dockerfile.test  Makefile  Makefile.controllerfiles  Makefile.rvfiles  controller-init  requirements-controller.txt
controller/docs/: toc.rst
controller/robot_vision/: .gitignore  CMakeLists.txt  Makefile  setup.py
controller/robot_vision/.github/workflows/: ci.yml
controller/robot_vision/cmake/: gtest.cmake
controller/robot_vision/docs/: conf.py  tracking.rst  transform.rst
controller/robot_vision/include/rv/: Utils.hpp
controller/robot_vision/include/rv/apollo/: connected_component_analysis.hpp  hungarian_optimizer.hpp
controller/robot_vision/include/rv/tracking/: CVModel.hpp  ObjectMatching.hpp  TrackManager.hpp
controller/robot_vision/python/examples/: custom_tracker.py
controller/robot_vision/python/src/robot_vision/: __init__.py
controller/robot_vision/src/rv/tracking/: CTRVModel.cpp  CVModel.cpp  MultiModelKalmanEstimator.cpp  ObjectMatching.cpp  TrackManager.cpp  UnscentedKalmanFilter.cpp
controller/robot_vision/test/: CMakeLists.txt  TrackingTests.cpp  main.cpp
controller/schema/: metadata.schema.json
controller/src/: controller-init
dlstreamer-pipeline-server/: README.md  config.json  config_reid.json
dlstreamer-pipeline-server/mosquitto/: mosquitto-secure.conf
docker/: 000-default.conf  Dockerfile  Dockerfile-broker  Dockerfile-interface  Dockerfile-model-installer  Dockerfile-sources  Makefile  Makefile.editorfiles  Makefile.jsmexamples  Makefile.scenecommonfiles  Makefile.sscapefiles  apache2.conf  database-init  default-ssl.conf  firefox-profile.tar  get_docker.sh  install-omz-models  requirements-dockerfile.txt  requirements-interface.txt  requirements-model-installer.txt  scenescape-init  scenescape-start  sel-init  user_access_config.json  webserver-init  yaml_parse.sh  yaml_validator
docs/: Makefile  README.md  index.rst  toc.rst
docs/doxygen/: Doxyfile  Doxyfile.common  api_docs  custom.css  doxygen-inline-scripts.js  header.html
docs/user-guide/: Getting-Started-Guide.md  How-to-autocalibrate-cameras-using-apriltags.md  How-to-autocalibrate-cameras-using-visual-features.md  How-to-configure-a-hierarchy-of-scenes.md  How-to-create-new-scene.md  How-to-enable-reidentification.md  How-to-inference-using-Nvidia-gpu-with-OVMS.md  Overview.md  (+15 more)
kubernetes/: Makefile  README.md
manager/: Dockerfile  Makefile  requirements-buildtime.txt  requirements-runtime.txt  setup.py
percebro/: Dockerfile  Makefile  README.md  detector_atag.py  detector_geti.py  detector_motion.py  detector_tesseract.py  percebro  percsim  requirements-buildtime.txt  requirements-runtime.txt  sensor.py  videoframe.py  videosource.py
sample_data/: docker-compose-dl-streamer-example.yml  docker-compose-example.yml  exampledb.tar.bz2
scene_common/: Dockefile  Dockerfile  Makefile  setup.py
sscape/: admin.py  docs  forms.py  middleware.py  model_directory_view.py  models.py  serializers.py  settings.py  setup.py  urls.py  validators.py  views.py  wsgi.py
tests/: Makefile  Makefile.external_models  Makefile.functional  Makefile.infra  Makefile.percebro  Makefile.perf  Makefile.reports  Makefile.sscape  calibrationdb.tar.bz2  check-openvino-version.py  common_test_utils.py  config.coveragerc  debugtest.py  diagnostic.py  mqtt-large-messages.py  mqtt_helper.py  pass_fail_report  runtest  test_utils.sh  testdb.tar.bz2  v4l-resolution.py
utils/: camdl  intrinsics  mapalign  matxf.py  model_config_gen.py  mosqsub  onvif  singleton.py  snapshot.py  waitforbroker
(+573 files in other folders)
